Fixing Collaborator from getting cut off

--- a/css/core.scss
+++ b/css/core.scss
@@ -763,14 +763,14 @@ header {
   background-attachment: fixed;
 
   .inner {
-    min-height: 1500px;
+    min-height: 1900px;
   }
 
   .copy {
     position: absolute;
     top: 20%;
     height: 10em;
-    margin-top: -16em;
+    margin-top: -18em;
     width: 100%;
   }
 }
